--- a/views/home.html
+++ b/views/home.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/28ad30bb99.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Mercado_Liebre</title>
 </head>
 <body>
-    <header>
+    <header class="home_header">
+        <div class="logo">
+            <img src="images/logo-mercado-liebre.svg" alt="logo">
+        </div>
+        <div class="buscador">
+            <input type="search" placeholder="Buscar productos,marcas">
+        </div>
+       <div  id="lupa">
+          <i class="fa-solid fa-magnifying-glass fa-xs"></i>
+       </div>
         
-        <img src="images/logo-mercado-liebre.svg" width="25%" alt="logo">
-        <h3>Lugar para poner la barra de tarea</h3>
+        
         <h3><i class="fa-solid fa-hand-holding-dollar fa-lg"></i>Compra en cuotas y sin tarjetas de creditos</h3>
         <nav>
             <ul>
@@ -19,18 +32,21 @@
                 <li><a href="">Vender</a></li>
                 <li><a href="">Ayuda</a></li>
             </ul>
-            <ul>
-                <li><a href="">Crea tu cucenta</a></li>
-                <li><a href="">Ingresa</a></li>
-                <li><a href="">Mis compras</a></li>
+            <ul class="lista2">
+                <li><a href="">Crea tu cuenta</a><i class="fa-solid fa-id-card"></i></li>
+                <li><a href="">Ingresa</a><i class="fa-solid fa-right-to-bracket"></i></li>
+                <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <img src="images/img-home-banner.jpg"  alt="Imagen del banner">
+        <div class="home_banner">
+            <img src="images/img-home-banner.jpg"  alt="Imagen del banner">
+        </div>
+        
         <section>
-            <h3>Basado en tu ultima vista</h3>
+            <h2>Basado en tu ultima vista</h2>
             <article>
                 <img src="images/img-cafetera-moulinex.jpg" width="25%" alt="cafetera moulinex">
                 <h4>$6770<br>40% OFF<br>Cafetera Moulinex</h4>
@@ -50,36 +66,44 @@
             
         </section>
         <section>
-            <h3 id="ofertas">Seccion de ofertas</h3>
+            <h2 id="ofertas">Seccion de ofertas</h2>
             <article>
                 <img src="images/img-cafetera-moulinex.jpg" width="25%" alt="cafetera moulinex">
-                <h4>$6770<br>40% OFF<br>Cafetera Moulinex</h4>
+                <h4 class="precio">$6770</h4>
+                <h4>40% OFF</h4>
+                <h4>Cafetera Moulinex</h4>
             </article>
             <article>
                 <img src="images/img-macbook-pro-2019.jpg" width="25%" alt="Macbook Pro 2019">
-                <h4>$230.000<br>20% off<br>Macbook Pro 2019</h4>
+                <h4 class="precio">$230.000</h4>
+                <h4>20% off</h4>
+                <h4>Macbook Pro 2019</h4>
             </article>
             <article>
                 <img src="images/img-samsung-galaxy-s10.jpg" width="25%" alt="Samsung Galaxy S10">
-                <h4>$70.500<br>10% off<br>Samsung Galaxy S10</h4>
+                <h4 class="precio">$70.500</h4>
+                <h4>10% off</h4>
+                <h4>Samsung Galaxy S10</h4>
             </article>
             <article>
                 <img src="images/img-tv-samsung-smart.jpg" width="25%" alt='Smart Tv Samsung 43"'>
-                <h4>$23.200<br>5% off<br>Smart Tv Samsung 43"</h4>
+                <h4 class="precio">$23.200</h4>
+                <h4>5% off</h4>
+                <h4>Smart Tv Samsung 43"</h4>
             </article>
         </section>
     </main>
     <footer>
         <section>
-            <h3><strong>Paga con tarjeta o con efectivo</strong></h3>
+            <h2>Paga con tarjeta o en efectivo</h2>
             <h4>Con MercadoLiebreCash tenes cuotas sin<br>interes con tarjeta o efectivo en puntos de pago.¡Y siempre es seguro! </h4>
         </section>
         <section>
-            <h3><strong>Envio gratis desde los $2.500</strong></h3>
+            <h2>Envio gratis desde los $2.500</h2>
             <h4>Solo por estar registrado en Mercado Liebre<br>tenes envio gratis en miles de productos.Es un beneficio de Mercado Puntos</h4>
         </section>
         <section>
-            <h3><strong>Seguridad de principio a fin</strong></h3>
+            <h2>Seguridad de principio a fin</h2>
             <h4>¿No te gusta? ¡Devolvelo! En Mercado Liebre<br>no hay nada que no puedas hacer por que estas siempre protegi@.<br><br>Copyright <i class="fa-regular fa-copyright fa-lg"></i> 1999-2020 MercadoLiebre S.R.L</h4>
         </section>
         <section></section>
