--- a/views/home.html
+++ b/views/home.html
@@ -38,6 +38,9 @@
                 <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
             </ul>
         </nav>
+        <div class="burger_menu">
+            <i class="fa-solid fa-bars fa-2xl"></i>
+        </div>
     </header>
 
     <main>
@@ -48,19 +51,27 @@
         <section>
             <h2>Basado en tu ultima vista</h2>
             <article>
-                <img src="images/img-cafetera-moulinex.jpg" width="25%" alt="cafetera moulinex">
+                <div class="producto_img">
+                    <img src="images/img-cafetera-moulinex.jpg" width="98%" alt="cafetera moulinex">
+                </div>
                 <h4>$6770<br>40% OFF<br>Cafetera Moulinex</h4>
             </article>
             <article>
-                <img src="images/img-macbook-pro-2019.jpg" width="25%" alt="Macbook Pro 2019">
+                <div class="producto_img">
+                    <img src="images/img-macbook-pro-2019.jpg" width="98%" alt="Macbook Pro 2019">
+                </div>
                 <h4>$230.000<br>20% off<br>Macbook Pro 2019</h4>
             </article>
             <article>
-                <img src="images/img-samsung-galaxy-s10.jpg" width="25%" alt="Samsung Galaxy S10">
+                <div class="producto_img">
+                    <img src="images/img-samsung-galaxy-s10.jpg" width="98%" alt="Samsung Galaxy S10">
+                </div>
                 <h4>$70.500<br>10% off<br>Samsung Galaxy S10</h4>
             </article>
             <article>
-                <img src="images/img-tv-samsung-smart.jpg" width="25%" alt='Smart Tv Samsung 43"'>
+                <div class="producto_img">
+                    <img src="images/img-tv-samsung-smart.jpg" width="98%" alt='Smart Tv Samsung 43"'>
+                </div>
                 <h4>$23.200<br>5% off<br>Smart Tv Samsung 43"</h4>
             </article>
             
@@ -68,25 +79,34 @@
         <section>
             <h2 id="ofertas">Seccion de ofertas</h2>
             <article>
-                <img src="images/img-cafetera-moulinex.jpg" width="25%" alt="cafetera moulinex">
+                <div class="producto_img">
+                    <img src="images/img-cafetera-moulinex.jpg" width="98%" alt="cafetera moulinex">
+                </div>
                 <h4 class="precio">$6770</h4>
                 <h4>40% OFF</h4>
                 <h4>Cafetera Moulinex</h4>
             </article>
             <article>
-                <img src="images/img-macbook-pro-2019.jpg" width="25%" alt="Macbook Pro 2019">
+                <div class="producto_img">
+                    <img src="images/img-macbook-pro-2019.jpg" width="98%" alt="Macbook Pro 2019">
+                </div>
                 <h4 class="precio">$230.000</h4>
                 <h4>20% off</h4>
                 <h4>Macbook Pro 2019</h4>
             </article>
             <article>
-                <img src="images/img-samsung-galaxy-s10.jpg" width="25%" alt="Samsung Galaxy S10">
+                <div class="producto_img">
+                    <img src="images/img-samsung-galaxy-s10.jpg" width="98%" alt="Samsung Galaxy S10">
+                </div>
                 <h4 class="precio">$70.500</h4>
                 <h4>10% off</h4>
                 <h4>Samsung Galaxy S10</h4>
             </article>
-            <article>
-                <img src="images/img-tv-samsung-smart.jpg" width="25%" alt='Smart Tv Samsung 43"'>
+            <article class="Tv">
+                <div class="img_tv">
+
+                </div>
+                
                 <h4 class="precio">$23.200</h4>
                 <h4>5% off</h4>
                 <h4>Smart Tv Samsung 43"</h4>
@@ -94,18 +114,26 @@
         </section>
     </main>
     <footer>
-        <section>
-            <h2>Paga con tarjeta o en efectivo</h2>
-            <h4>Con MercadoLiebreCash tenes cuotas sin<br>interes con tarjeta o efectivo en puntos de pago.¡Y siempre es seguro! </h4>
+        
+        <section class="sec_footer">
+            <div class="card">
+                <i class="fa- solid fa-credit-card "></i>
+            </div>
+            <h2 class="txt_footer">Paga con tarjeta o en efectivo</h2>
+            <h4>Con MercadoLiebreCash tenes cuotas sin</h4>
+            <h4>interes con tarjeta o efectivo en puntos de pago.¡Y siempre es seguro! </h4>
         </section>
-        <section>
-            <h2>Envio gratis desde los $2.500</h2>
+        <section class="sec_footer">
+            <h2 class="txt_footer">Envio gratis desde los $2.500</h2>
             <h4>Solo por estar registrado en Mercado Liebre<br>tenes envio gratis en miles de productos.Es un beneficio de Mercado Puntos</h4>
         </section>
-        <section>
-            <h2>Seguridad de principio a fin</h2>
-            <h4>¿No te gusta? ¡Devolvelo! En Mercado Liebre<br>no hay nada que no puedas hacer por que estas siempre protegi@.<br><br>Copyright <i class="fa-regular fa-copyright fa-lg"></i> 1999-2020 MercadoLiebre S.R.L</h4>
+        <section class="sec_footer">
+            <h2 class="txt_footer">Seguridad de principio a fin</h2>
+            <h4>¿No te gusta? ¡Devolvelo! En Mercado Liebre</h4>
+            <h4>no hay nada que no puedas hacer por que estas siempre protegi@.</h4>
+            
         </section>
+        <h4 class="copyright">Copyright <i class="fa-regular fa-copyright fa-lg"></i> 1999-2020 MercadoLiebre S.R.L</h4>
         <section></section>
     </footer>
 </body>
