--- a/views/home.html
+++ b/views/home.html
@@ -13,16 +13,12 @@
 </head>
 <body>
     <header class="home_header">
-        <div class="logo">
-            <img src="images/logo-mercado-liebre.svg" alt="logo">
-        </div>
+                <img class="logo" src="images/logo-mercado-liebre.svg" alt="logo">
+        
         <div class="buscador">
             <input type="search" placeholder="Buscar productos,marcas">
         </div>
-       <div  id="lupa">
-          <i class="fa-solid fa-magnifying-glass fa-xs"></i>
-       </div>
-        
+        <i class="fa-solid fa-magnifying-glass fa-s"></i>
         
         <h3><i class="fa-solid fa-hand-holding-dollar fa-lg"></i>Compra en cuotas y sin tarjetas de creditos</h3>
         <nav>
@@ -116,24 +112,28 @@
     <footer>
         
         <section class="sec_footer">
-            <div class="card">
-                <i class="fa- solid fa-credit-card "></i>
-            </div>
+            <i class="fa-solid fa-credit-card fa-2xl"></i>
             <h2 class="txt_footer">Paga con tarjeta o en efectivo</h2>
             <h4>Con MercadoLiebreCash tenes cuotas sin</h4>
-            <h4>interes con tarjeta o efectivo en puntos de pago.¡Y siempre es seguro! </h4>
+            <h4> interes con tarjeta o efectivo en puntos de</h4>
+            <h4> pago.¡Y siempre es seguro! </h4>
         </section>
         <section class="sec_footer">
+            <i class="fa-solid fa-gift fa-2xl"></i>
             <h2 class="txt_footer">Envio gratis desde los $2.500</h2>
-            <h4>Solo por estar registrado en Mercado Liebre<br>tenes envio gratis en miles de productos.Es un beneficio de Mercado Puntos</h4>
+            <h4>Solo por estar registrado en Mercado Liebre</h4>
+            <h4>tenes envio gratis en miles de productos.Es</h4>
+            <h4>un beneficio de Mercado Puntos</h4>
         </section>
         <section class="sec_footer">
+            <i class="fa-solid fa-user-shield fa-2xl"></i>
             <h2 class="txt_footer">Seguridad de principio a fin</h2>
             <h4>¿No te gusta? ¡Devolvelo! En Mercado Liebre</h4>
-            <h4>no hay nada que no puedas hacer por que estas siempre protegi@.</h4>
+            <h4>no hay nada que no puedas hacer porque</h4>
+            <h4> estas siempre protegi@.</h4>
             
         </section>
-        <h4 class="copyright">Copyright <i class="fa-regular fa-copyright fa-lg"></i> 1999-2020 MercadoLiebre S.R.L</h4>
+        <p class="copyright">Copyright <i class="fa-regular fa-copyright fa-lg"></i> 1999-2020 MercadoLiebre S.R.L</p>
         <section></section>
     </footer>
 </body>
