--- a/views/home.html
+++ b/views/home.html
@@ -17,10 +17,11 @@
         
         <div class="buscador">
             <input type="search" placeholder="Buscar productos,marcas">
+            <i class="fa-solid fa-magnifying-glass fa-s"></i>
         </div>
-        <i class="fa-solid fa-magnifying-glass fa-s"></i>
+       
         
-        <h3><i class="fa-solid fa-hand-holding-dollar fa-lg"></i>Compra en cuotas y sin tarjetas de creditos</h3>
+        <p><i class="fa-solid fa-hand-holding-dollar fa-lg"></i>Compra en cuotas y sin tarjetas de creditos</p>
         <nav>
             <ul>
                 <li><a href="#ofertas">Ofertas</a></li>
@@ -34,9 +35,13 @@
                 <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
             </ul>
         </nav>
-        <div class="burger_menu">
-            <i class="fa-solid fa-bars fa-2xl"></i>
-        </div>
+        <article>
+            <div class="burger_menu">
+                <span><i class="fa-solid fa-bars fa-xl"></i></span>
+            </div>
+        </article>
+            
+        
     </header>
 
     <main>
@@ -100,7 +105,7 @@
             </article>
             <article class="Tv">
                 <div class="img_tv">
-
+                    <img src="images/img-tv-samsung-smart.jpg" width="98%" alt="">
                 </div>
                 
                 <h4 class="precio">$23.200</h4>
@@ -112,25 +117,32 @@
     <footer>
         
         <section class="sec_footer">
-            <i class="fa-solid fa-credit-card fa-2xl"></i>
-            <h2 class="txt_footer">Paga con tarjeta o en efectivo</h2>
-            <h4>Con MercadoLiebreCash tenes cuotas sin</h4>
-            <h4> interes con tarjeta o efectivo en puntos de</h4>
-            <h4> pago.¡Y siempre es seguro! </h4>
+            <i  class="fa-solid fa-credit-card fa-2xl"></i>
+            <h3 class="txt_footer">Paga con tarjeta o en efectivo</h3>
+        
+                <h4>Con MercadoLiebreCash tenes cuotas sin</h4>
+                <h4> interes con tarjeta o efectivo en puntos de</h4>
+                <h4> pago.¡Y siempre es seguro! </h4>
+            
         </section>
         <section class="sec_footer">
             <i class="fa-solid fa-gift fa-2xl"></i>
-            <h2 class="txt_footer">Envio gratis desde los $2.500</h2>
-            <h4>Solo por estar registrado en Mercado Liebre</h4>
-            <h4>tenes envio gratis en miles de productos.Es</h4>
-            <h4>un beneficio de Mercado Puntos</h4>
+            <h3 class="txt_footer">Envio gratis desde los $2.500</h3>
+        
+                <h4>Solo por estar registrado en Mercado Liebre</h4>
+                <h4>tenes envio gratis en miles de productos.Es</h4>
+                <h4>un beneficio de Mercado Puntos</h4>
+            
         </section>
         <section class="sec_footer">
-            <i class="fa-solid fa-user-shield fa-2xl"></i>
-            <h2 class="txt_footer">Seguridad de principio a fin</h2>
-            <h4>¿No te gusta? ¡Devolvelo! En Mercado Liebre</h4>
-            <h4>no hay nada que no puedas hacer porque</h4>
-            <h4> estas siempre protegi@.</h4>
+            <div class="icon"><i class="fa-solid fa-user-shield fa-2xl"></i></div>
+        
+                <h3 class="txt_footer">Seguridad de principio a fin</h3>
+                 <h4>¿No te gusta? ¡Devolvelo! En Mercado Liebre</h4>
+                 <h4>no hay nada que no puedas hacer porque</h4>
+                 <h4> estas siempre protegi@.</h4>
+            
+            
             
         </section>
         <p class="copyright">Copyright <i class="fa-regular fa-copyright fa-lg"></i> 1999-2020 MercadoLiebre S.R.L</p>
