--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,71 +1,9 @@
 @import url(./general.css);
-
-body h2{
-    font-size: 24px;
-}
-body h3{
-    font-size: 18px;
-}
-body h4{
-    font-size: 16px;
-}
-body p{
-    font-size: 12px;
-}
-
-.home_header{
-    
-    background-color: var(--color-amarillo);
-}
-.logo{
-    width: 50vw;
-    margin: 30px 0px 15px 20px;
-    padding: 5px ;
-}
-.buscador input{
-    display: block;
-    width: 60vw;
-}
-.buscador i{
-    margin-top: 10px;
-}
-.buscador{
-    margin: 0px 0px 15px 15px;
-}
-body header p{
-    text-align: center;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-.lista2 li a{
-    margin-right: 5px;
-}
-article{
-    
-    align-items: center;
-}
-
-.burger_menu{
-    text-align: center;
-   
-}
-.burger_menu span{
-    
-    padding: 8px;
-    margin: 5px;
-    background-color:var(--color-celeste);
-    border: 1px solid;
-    border-radius: 5px;
-}
-
-.burger_menu i{
-    margin: 40px 0;
-    color:white ;
-    
-    
-}
+@import url(./header.css);
+@import url(./respondive.css);
 
 
+/* franja del baner*/
 
 .home_banner{
     height: 40%;
@@ -77,12 +15,21 @@ article{
     height: 100%;
     width: 100%;
 }
+
+/* Parte del Main*/
+
 main{
     background-color: var(--color-grisclaro);
+   
+}
+.producto_detalles{
+    text-align: left;
+    
 }
 main section article{
     text-align: center;
-    margin: 20px 5px;
+    margin: 10px;
+    background-color: #fff;
 }
 .precio{
     font-size: 18px;
@@ -91,30 +38,51 @@ main section article{
 main section h2{
     text-align: center;
 }
-main article h4{
+.logo__envio{
+    display: flex;
+    width: 50px;
+    height: 50px;
+    
+    align-items: center;
+    border:1px solid #0c7605 ;
+    border-radius: 50%;
+}
+.descripcion{
+    display: none;
+}
+.descuentos{
+    color: green;
+}
+
+/*Parte del Footer*/
+
+
+
+footer{
+    display: flex;
+    justify-content:flex-start;
     text-align: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    
+    background-color: var(--color-grisclaro);
+    
 }
 
-
-
-
-
-footer section {
+.footer__section__article{
     text-align: center;
+    background-color:#fff;
+    margin: 10px;
+    
+    
+    
 }
-
-   
-
-.sec_footer{
-    margin: 30px 0;
-}
-.sec_footer i{
-    margin: 10px 0;
+footer section article i{
+    margin: 30px 0px 20px 0px;
     color: var(--color-celeste);
+    font-size: 2em;
 }
-.txt_footer{
-    margin-top: 20px;
-}
+
 
 
 
