--- a/views/home.html
+++ b/views/home.html
@@ -13,16 +13,19 @@
 </head>
 <body>
     <header class="home_header">
-                <img class="logo" src="images/logo-mercado-liebre.svg" alt="logo">
-        
-        <div class="buscador">
-            <input type="search" placeholder="Buscar productos,marcas">
-            <i class="fa-solid fa-magnifying-glass fa-s"></i>
-        </div>
-       
-        
-        <p><i class="fa-solid fa-hand-holding-dollar fa-lg"></i>Compra en cuotas y sin tarjetas de creditos</p>
-        <nav>
+        <section class="header__section">
+            <img class="logo" src="images/logo-mercado-liebre.svg" alt="logo" width="100%">
+            
+                <form action="">
+                    <input type="search" placeholder="Buscar productos,marcas">
+                    <i class="fa-solid fa-magnifying-glass fa-s"></i>
+                </form>
+                <article class="header__article">    
+                <i class="fa-solid fa-hand-holding-dollar fa-lg"></i>
+                <span>Compra en cuotas y sin tarjetas de creditos</span>
+                </article>
+        </section>
+        <nav class="nav__home">
             <ul>
                 <li><a href="#ofertas">Ofertas</a></li>
                 <li><a href="">Tiendas Oficiales</a></li>
@@ -46,107 +49,161 @@
 
     <main>
         <div class="home_banner">
-            <img src="images/img-home-banner.jpg"  alt="Imagen del banner">
+            <img src="images/img-home-banner.jpg" width="100%" alt="Imagen del banner">
         </div>
         
         <section>
             <h2>Basado en tu ultima vista</h2>
             <article>
-                <div class="producto_img">
-                    <img src="images/img-cafetera-moulinex.jpg" width="98%" alt="cafetera moulinex">
+                
+                    <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera moulinex">
+                
+                <div class="producto_detalles">
+                    <div class="logo__envio">
+                        <i class="fa-solid fa-truck fa-lg" style="color: #0c7605;"></i>
+                    </div>
+                    <h4>$6770</h4>
+                    <h4 class="descuentos" >40% OFF</h4>
+                    <h4 class="descripcion">Cafetera Moulinex</h4>
                 </div>
-                <h4>$6770<br>40% OFF<br>Cafetera Moulinex</h4>
+                
             </article>
             <article>
-                <div class="producto_img">
-                    <img src="images/img-macbook-pro-2019.jpg" width="98%" alt="Macbook Pro 2019">
+                
+                    <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="Macbook Pro 2019">
+               
+                <div class="producto_detalles">
+                    <div class="logo__envio">
+                        <i class="fa-solid fa-truck fa-lg" style="color: #0c7605;"></i>
+                    </div>
+                    <h4>$230.000</h4>
+                    <h4 class="descuentos" >20% off</h4>
+                    <h4 class="descripcion">Macbook Pro 2019</h4>
                 </div>
-                <h4>$230.000<br>20% off<br>Macbook Pro 2019</h4>
+                
             </article>
             <article>
-                <div class="producto_img">
-                    <img src="images/img-samsung-galaxy-s10.jpg" width="98%" alt="Samsung Galaxy S10">
+                
+                    <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="Samsung Galaxy S10">
+                
+                <div class="producto_detalles">
+                    <div class="logo__envio">
+                        <i class="fa-solid fa-truck fa-lg" style="color: #0c7605;"></i>
+                    </div>
+                    <h4>$70.500</h4>
+                    <h4 class="descuentos" >10% off</h4>
+                    <h4 class="descripcion">Samsung Galaxy S10</h4>
                 </div>
-                <h4>$70.500<br>10% off<br>Samsung Galaxy S10</h4>
+                
             </article>
             <article>
-                <div class="producto_img">
-                    <img src="images/img-tv-samsung-smart.jpg" width="98%" alt='Smart Tv Samsung 43"'>
+                
+                    <img src="images/img-tv-samsung-smart.jpg" width="100%" alt='Smart Tv Samsung 43"'>
+                
+                <div class="producto_detalles">
+                    <div class="logo__envio">
+                        <i class="fa-solid fa-truck fa-lg" style="color: #0c7605;"></i>
+                    </div>
+                    <h4>$23.200</h4>
+                    <h4 class="descuentos" >5% off</h4>
+                    <h4 class="descripcion">Smart Tv Samsung 43"</h4>
                 </div>
-                <h4>$23.200<br>5% off<br>Smart Tv Samsung 43"</h4>
+                
             </article>
             
         </section>
         <section>
             <h2 id="ofertas">Seccion de ofertas</h2>
             <article>
-                <div class="producto_img">
-                    <img src="images/img-cafetera-moulinex.jpg" width="98%" alt="cafetera moulinex">
+               
+                    <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera moulinex">
+                
+                <div>
+
+                </div class="producto_detalles">
+                <div class="logo__envio">
+                    <i class="fa-solid fa-truck fa-lg" style="color: #0c7605;"></i>
                 </div>
                 <h4 class="precio">$6770</h4>
-                <h4>40% OFF</h4>
-                <h4>Cafetera Moulinex</h4>
+                <h4 class="descuentos" >40% OFF</h4>
+                <h4 class="descripcion">Cafetera Moulinex</h4>
             </article>
             <article>
-                <div class="producto_img">
-                    <img src="images/img-macbook-pro-2019.jpg" width="98%" alt="Macbook Pro 2019">
-                </div>
-                <h4 class="precio">$230.000</h4>
-                <h4>20% off</h4>
-                <h4>Macbook Pro 2019</h4>
-            </article>
-            <article>
-                <div class="producto_img">
-                    <img src="images/img-samsung-galaxy-s10.jpg" width="98%" alt="Samsung Galaxy S10">
-                </div>
-                <h4 class="precio">$70.500</h4>
-                <h4>10% off</h4>
-                <h4>Samsung Galaxy S10</h4>
-            </article>
-            <article class="Tv">
-                <div class="img_tv">
-                    <img src="images/img-tv-samsung-smart.jpg" width="98%" alt="">
+                
+                    <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="Macbook Pro 2019">
+                
+                <div class="producto_detalles">
+                    <div class="logo__envio">
+                        <i class="fa-solid fa-truck fa-lg" style="color: #0c7605;"></i>
+                    </div>
+                    <h4 class="precio">$230.000</h4>
+                    <h4 class="descuentos" >20% off</h4>
+                    <h4 class="descripcion">Macbook Pro 2019</h4>
                 </div>
                 
-                <h4 class="precio">$23.200</h4>
-                <h4>5% off</h4>
-                <h4>Smart Tv Samsung 43"</h4>
+            </article>
+            <article>
+                <div >
+                    <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="Samsung Galaxy S10">
+                </div>
+                <div class="producto_detalles">
+                    <div class="logo__envio">
+                        <i class="fa-solid fa-truck fa-lg" style="color: #0c7605;"></i>
+                    </div>
+                    <h4 class="precio">$70.500</h4>
+                    <h4 class="descuentos" >10% off</h4>
+                    <h4 class="descripcion">Samsung Galaxy S10</h4>
+                </div>
+                
+            </article>
+            <article class="Tv">
+                 <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="">
+                 <div class="producto_detalles">
+                    <h4 class="precio">$23.200</h4>
+                    <h4 class="descuentos" >5% off</h4>
+                    <h4 class="descripcion">Smart Tv Samsung 43"</h4>
+                 </div>
+               
             </article>
         </section>
     </main>
     <footer>
         
         <section class="sec_footer">
-            <i  class="fa-solid fa-credit-card fa-2xl"></i>
+            <article class="footer__section__article">
+                <i  class="fa-solid fa-credit-card fa-2xl"></i>
             <h3 class="txt_footer">Paga con tarjeta o en efectivo</h3>
         
-                <h4>Con MercadoLiebreCash tenes cuotas sin</h4>
-                <h4> interes con tarjeta o efectivo en puntos de</h4>
-                <h4> pago.¡Y siempre es seguro! </h4>
+                <p>MercadoLiebreCash tenes cuotas sin
+                    interes con tarjeta o efectivo en puntos de
+                    pago.¡Y siempre es seguro!</p>  
+            </article>
             
         </section>
         <section class="sec_footer">
-            <i class="fa-solid fa-gift fa-2xl"></i>
-            <h3 class="txt_footer">Envio gratis desde los $2.500</h3>
-        
-                <h4>Solo por estar registrado en Mercado Liebre</h4>
-                <h4>tenes envio gratis en miles de productos.Es</h4>
-                <h4>un beneficio de Mercado Puntos</h4>
+            <article class="footer__section__article">
+                <i class="fa-solid fa-gift fa-2xl"></i>
+                <h3 class="txt_footer">Envio gratis desde los $2.500</h3>
+            
+                    <p>Solo por estar registrado en Mercado Liebre
+                    tenes envio gratis en miles de productos.Es
+                    un beneficio de Mercado Puntos</p>
+            </article>
+            
             
         </section>
         <section class="sec_footer">
-            <div class="icon"><i class="fa-solid fa-user-shield fa-2xl"></i></div>
-        
+            <article class="footer__section__article">
+                <i class="fa-solid fa-user-shield fa-2xl"></i>
                 <h3 class="txt_footer">Seguridad de principio a fin</h3>
-                 <h4>¿No te gusta? ¡Devolvelo! En Mercado Liebre</h4>
-                 <h4>no hay nada que no puedas hacer porque</h4>
-                 <h4> estas siempre protegi@.</h4>
-            
-            
+                <p> ¿No te gusta? ¡Devolvelo! En Mercado Liebre
+                 no hay nada que no puedas hacer porque
+                  estas siempre protegi@.</p>
+            </article>
             
         </section>
         <p class="copyright">Copyright <i class="fa-regular fa-copyright fa-lg"></i> 1999-2020 MercadoLiebre S.R.L</p>
-        <section></section>
+        
     </footer>
 </body>
 </html>
