ajustes en el css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,7 +29,7 @@ main{
 }
 main section article{
     text-align: center;
-    margin: 10px;
+    margin: 10px 10px 0px 10px;
     background-color: #fff;
 }
 .precio{
