--- a/public/css/header.css
+++ b/public/css/header.css
@@ -12,29 +12,37 @@ body p{
 }
 
 .home_header{
-    
-    background-color: var(--color-amarillo);
+     background-color: var(--color-amarillo);
 }
 .logo{
-    width: 50vw;
-    margin: 30px 0px 15px 20px;
-    padding: 5px ;
+    width: 40vw;   
 }
-.buscador input{
-    display: block;
-    width: 60vw;
+.header__form {
+    padding: ;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
 }
-.buscador i{
-    margin-top: 10px;
+
+.header__form input{
+    width: 100%;
+    height: 40%;
+    border: 1px solid black;
+    border-radius: 8px;
+    margin-right: 3px;
 }
-.buscador{
-    margin: 0px 0px 15px 15px;
+.header__section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-around;
+    padding: 5% 0; 
 }
-body header p{
-    text-align: center;
-    margin-bottom: 20px;
-    font-weight: bold;
+
+.header__article{
+    margin-top: 5%;
+    font-size: 12px;
 }
+
 .lista2 li a{
     margin-right: 5px;
 }
@@ -60,6 +68,6 @@ article{
     margin: 40px 0;
     color:white ;   
 }
-.nav__home{
+.header__nav__home{
     display: none;
 }
