--- a/views/home.html
+++ b/views/home.html
@@ -47,21 +47,15 @@
                 <div class="burger_menu">
                     <span><i class="fa-solid fa-bars fa-xl"></i></span>
                 </div>
-            </article>
-        
-        
-            
-        
+            </article>  
     </header>
-
+    
     <main>
-        <div class="home_banner">
-            <img src="images/img-home-banner.jpg" width="100%" alt="Imagen del banner">
-        </div>
+        <img class="home_banner" src="images/img-home-banner.jpg" width="100%" alt="Imagen del banner">
         <h2 class="home__main__titulo__h2">Basado en tu ultima vista</h2>
         <section class="section__ultima__vista main__section">
             
-            <article>
+            <article class="main__article__producto">
                 
                     <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera moulinex">
                 
@@ -75,7 +69,7 @@
                 </div>
                 
             </article>
-            <article>
+            <article class="main__article__producto">
                 
                     <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="Macbook Pro 2019">
                
@@ -89,7 +83,7 @@
                 </div>
                 
             </article>
-            <article>
+            <article class="main__article__producto">
                 
                     <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="Samsung Galaxy S10">
                 
@@ -103,7 +97,7 @@
                 </div>
                 
             </article>
-            <article>
+            <article class="main__article__producto">
                 
                     <img src="images/img-tv-samsung-smart.jpg" width="100%" alt='Smart Tv Samsung 43"'>
                 
@@ -122,7 +116,7 @@
         <h2 class="home__main__titulo__h2">Seccion de ofertas</h2>
         <section class="section__ofertas main__section">
             
-            <article>
+            <article class="main__article__producto">
                
                     <img src="images/img-cafetera-moulinex.jpg" width="100%" alt="cafetera moulinex">
                 
@@ -137,7 +131,7 @@
                     <h4 class="descripcion">Cafetera Moulinex</h4>
                 </div>
             </article>
-            <article>
+            <article class="main__article__producto">
                 
                     <img src="images/img-macbook-pro-2019.jpg" width="100%" alt="Macbook Pro 2019">
                 
@@ -151,7 +145,7 @@
                 </div>
                 
             </article>
-            <article>
+            <article class="main__article__producto">
                 <div >
                     <img src="images/img-samsung-galaxy-s10.jpg" width="100%" alt="Samsung Galaxy S10">
                 </div>
@@ -165,8 +159,10 @@
                 </div>
                 
             </article>
-            <article class="Tv">
-                 <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="">
+            <article  class="main__article__producto">
+                <div>
+                    <img src="images/img-tv-samsung-smart.jpg" width="100%" alt="">
+                </div>
                  <div class="producto_detalles">
                     <div class="logo__envio">
                         <i class="fa-solid fa-truck fa-lg" style="color: #0c7605;"></i>
@@ -179,6 +175,7 @@
             </article>
         </section>
     </main>
+    
     <footer>
         
         <section class="sec_footer">
