--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,7 @@
 @import url(./general.css);
 @import url(./header.css);
 @import url(./respondive.css);
+@import url(./login.css);
 
 
 /* franja del baner
