--- a/views/home.html
+++ b/views/home.html
@@ -14,7 +14,7 @@
 <body>
     <header class="home_header">
         <section class="header__section">
-            <img class="logo" src="images/logo-mercado-liebre.svg" alt="logo" width="100%">
+            <img class="logo" src="/images/logo-mercado-liebre.svg" alt="logo" width="100%">
             
                 <form action="" class="header__form">
                     <input type="search" placeholder="Buscar productos,marcas">
@@ -36,8 +36,8 @@
             </nav>
             <nav class="nav__home2">
                 <ul>
-                    <li><a href="">Crea tu cuenta</a><i class="fa-solid fa-id-card"></i></li>
-                    <li><a href="">Ingresa</a><i class="fa-solid fa-right-to-bracket"></i></li>
+                    <li><a href="/views/register.html">Crea tu cuenta</a><i class="fa-solid fa-id-card"></i></li>
+                    <li><a href="/views/login.html">Ingresa</a><i class="fa-solid fa-right-to-bracket"></i></li>
                     <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
                 </ul>
             </nav>    
