--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,72 @@
-.login-form{
+.form-login{
+    font-weight: 800;
+    width: 70vw;
+    padding: 3% 2%;
+    height: vh;
+    margin: 0 auto;
+   
+}
+.div-login-form{
+    width: 100%;
+    height: 100%;
     display:flex ;
     flex-direction: column;
     align-items: center;
+    gap: 2%;
+    margin:5% 0;
+    box-shadow: 10px 5px 10px  black ;
+}
+.div-login-form input{
+    width: 75%;
+    height: 15%;
+    padding: 10px;
+    border-radius: 10px;
+}
+.div-login-form label{
+    cursor: pointer;
+    padding: 4% 0;
+    
+}
+.boton-login-enviar{
+    border-radius: 15px;
+    margin: 4% 0;
+    padding: 5%;
+    width: 40%;
+    display: inline-block;
+   background:var(--color-celeste) ;
+   transition: all 0.8;
+   font-weight: 800;
+   font-size: large;
+}
+.boton-login-enviar:hover{
+    transform: scale(1.2);
+    color: var(--color-amarillo);
+}
+/*-------------------------------------------*/
+@media(min-width: 768px){
+    .boton-login-enviar{
+        border-radius: 15px;
+    margin: 4% 0;
+    padding: 3%;
+    width: 30%;
+    display: inline-block;
+   background:var(--color-celeste) ;
+   transition: all 0.8s;
+   font-weight: 800;
+   font-size: large;
+    }
+}
+@media(min-width:1024px){
+    
+    .div-login-form label{
+        cursor: pointer;
+        padding: 4% 0;
+        font-size: 1.2rem; 
+    }
+    
+    .boton-login-enviar{
+        width: 25%;
+        font-size: 1.5rem;
+    }
+    
 }
