--- a/views/login.html
+++ b/views/login.html
@@ -51,14 +51,15 @@
     </header>
 
     <main>
-        <form action="">
-            <div class="login-form">
+        <form class="form-login" action="/" method="post">
+            <div class="div-login-form">
                 <label for="nombre-usuario">Nombre de Usuario</label>
                 <input type="text" id="nombre-usuario" name="nombre-usuario" >
                 <label for="contraseña">Contraseña</label>
-                <input type="password" id="contraseña" name="contraseña" >
+                <input type="password" id="contraseña" name="contraseña" > 
+                <button class="boton-login-enviar" type="submit">Enviar</button>
             </div>
-            <button type="submit"><a href="/">Enviar</a></button>
+          
         </form>
     </main>
     <footer>
