--- a/views/register.html
+++ b/views/register.html
@@ -96,7 +96,7 @@
                 <label for="contraseña">Contraseña</label>
                 <input type="password" id="contraseña" name="contraseña" required>
             </div>
-            <a href="/">Enviar</a>
+            <button type="submit">Registrarse</button>
             <button type="reset">Reset</button>
            
         </form>
