--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,7 @@
 @import url(./header.css);
 @import url(./respondive.css);
 @import url(./login.css);
-
+@import url(./register.css);
 
 /* franja del baner
 ------------------------------------------------*/
