--- a/views/login.html
+++ b/views/login.html
@@ -51,7 +51,7 @@
     </header>
 
     <main>
-        <form class="form-login" action="/" method="post">
+        <form class="form-login" action="/login" method="post">
             <div class="div-login-form">
                 <label for="nombre-usuario">Nombre de Usuario</label>
                 <input type="text" id="nombre-usuario" name="nombre-usuario" >
