--- a/views/home.html
+++ b/views/home.html
@@ -36,8 +36,8 @@
             </nav>
             <nav class="nav__home2">
                 <ul>
-                    <li><a href="/views/register.html">Crea tu cuenta</a><i class="fa-solid fa-id-card"></i></li>
-                    <li><a href="/views/login.html">Ingresa</a><i class="fa-solid fa-right-to-bracket"></i></li>
+                    <li><a href="/register">Crea tu cuenta</a><i class="fa-solid fa-id-card"></i></li>
+                    <li><a href="/login">Ingresa</a><i class="fa-solid fa-right-to-bracket"></i></li>
                     <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
                 </ul>
             </nav>    
