--- a/views/register.html
+++ b/views/register.html
@@ -80,9 +80,9 @@
             <div class="perfil-registro">
                 <h3>Perfil de usurio</h3>
                 <h3 class="eleccion-perfil">Que deceas hacer? Vender o comprar?!</h3>
-                <label for="perfil">comprador</label>
+                <label class="label-perfil" for="perfil">comprador</label>
                 <input type="radio" id="perfil" name="perfil">
-                <label for="perfil">vendedor</label>
+                <label class="label-perfil" for="perfil">vendedor</label>
                 <input type="radio" id="perfil" name="perfil">
             </div>
             <div class="categoria-registro">
