--- a/views/home.html
+++ b/views/home.html
@@ -176,7 +176,7 @@
         </section>
     </main>
     
-    <footer>
+    <footer class="home-footer">
         
         <section class="sec_footer">
             <article class="footer__section__article">
