--- a/public/css/respondive.css
+++ b/public/css/respondive.css
@@ -49,7 +49,7 @@
         border:1px solid #0c7605 ;
         border-radius: 50%;
         right: 15%;
-        bottom: 55%;   
+        bottom: 81%;   
     }
     .main__section{
         display: flex;
@@ -63,10 +63,15 @@
         border: 1px solid #ebebeb;
         box-shadow: 0px 0px 10px rgb(100,100,100);
     }
-    
-    .descripcion{
-        display: block;
-    
+    .producto_detalles{
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        padding: 5px;
+    }
+    .producto_detalles .descripcion{
+        display:initial;
+        font-size: 1.2rem;
     }
 
      
@@ -74,6 +79,13 @@
 /*DESKOP 1024*/
 
 @media(min-width: 1024px){
+    .home__main__titulo__h2{
+        margin-left: 10px;
+    }
+    .producto_detalles .descripcion{
+        display:initial;
+        font-size: 1.2rem;
+    }
     
 .main__article__producto{
         width: 23%;
@@ -106,5 +118,18 @@
         border-radius: 8px;
         margin-right: 3px;
     }
+    .home-footer{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 70%;
+      justify-content: space-around;
+    }
+    .home-footer .sec_footer{
+        width: 30%;
+        display: block;
+        border: 1px solid black;
+    }
+    
 }
 
